--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "shortid": "^2.2.16",
     "cookie-parser": "^1.4.5",
     "md5": "^2.3.0",
-    "bcrypt": "^5.0.1"
+    "bcrypt": "^5.0.1",
+    "@sendgrid/mail": "^7.4.2"
   },
   "engines": {
     "node": "12.x"
